[gd_scene load_steps=10 format=2]

[ext_resource path="res://Modelos/Floresta/CasaMadeira/Interior/Casa_MadeiraInterior.tscn" type="PackedScene" id=1]
[ext_resource path="res://fontes/DTM-Sans.otf" type="DynamicFontData" id=2]
[ext_resource path="res://fontes/Butoons.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/Sobre.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Camera"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.750935, -150.009, 1.30084 ), Vector3( -0.40299, -150.002, 0.698028 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.751435, -0.794139, -3.24675 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.415489, -150.003, -0.71968 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 13
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/menubotoes/Texto:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Texto"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/menubotoes/Texto:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Sobre" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Fundo" type="Spatial" parent="."]

[node name="Casa_MadeiraInterior" parent="Fundo" instance=ExtResource( 1 )]

[node name="ViewportContainer" type="ViewportContainer" parent="Fundo"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="Fundo/ViewportContainer"]
size = Vector2( 320, 240 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="Fundo/ViewportContainer/Viewport"]
transform = Transform( -0.865934, -0.0145032, -0.499947, -0.0125601, 0.999895, -0.00725159, 0.5, -2.32831e-09, -0.866025, -0.751435, -0.794139, -3.24675 )
fov = 46.1006

[node name="Camera_Anim" type="AnimationPlayer" parent="Fundo/ViewportContainer/Viewport/Camera"]
anims/Camera = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 35
custom_constants/margin_left = 25

[node name="menubotoes" type="VBoxContainer" parent="Menu/MarginContainer"]
margin_left = 25.0
margin_top = 35.0
margin_right = 320.0
margin_bottom = 240.0

[node name="Texto" type="Label" parent="Menu/MarginContainer/menubotoes"]
margin_right = 295.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 3 )
text = "Esse \"Jogo\" em si é so um teste para ver como 
ficaria se eu fizesse um jogo 3D no GODOT, o
 jogo NÃO está finalizado tem muita coisa 
faltando e MUITO pouco conteúdo e também é o 
meu PRIMEIRO jogo 3D, 
então espere por bugs ou até uma queda de 
fps, um detalhe todos os modelos 3D foram
feitos por mim no blender e também o jogo
tem uma tematica de jogo de PSX(Ps1)."
percent_visible = 0.0

[node name="voltar" type="Button" parent="Menu/MarginContainer/menubotoes"]
margin_top = 172.0
margin_right = 95.0
margin_bottom = 193.0
size_flags_horizontal = 0
theme = ExtResource( 3 )
text = "Voltar Menu"

[node name="Text_Anim" type="AnimationPlayer" parent="Menu"]
anims/RESET = SubResource( 4 )
anims/Texto = SubResource( 5 )

[connection signal="pressed" from="Menu/MarginContainer/menubotoes/voltar" to="." method="_on_voltar_pressed"]
